--- a/testContratos/package.json
+++ b/testContratos/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.9"
+    "hardhat": "^2.22.9",
+    "mocha": "^10.7.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2"
